inventory-service/k8s-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: inventory-service-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /inventory
spec:
  ingressClassName: nginx
  rules:
    - host: localhost
      http:
        paths:
          - path: /inventory
            pathType: Prefix
            backend:
              service:
                name: inventory-service-svc
                port:
                  number: 8080
